# visages-superproject

./: CMakeLists.txt
superbuild/projects_modules/: ANIMA.cmake  QtShanoir.cmake  visagesPlugins.cmake
